--- a/src/H.LowCode.RenderEngine/H.LowCode.RenderEngine/H.LowCode.RenderEngine.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.RenderEngine/H.LowCode.RenderEngine.csproj
@@ -8,6 +8,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Schema\H.LowCode.Schema.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Update="H.Extensions.System" Version="0.1.2" />
   </ItemGroup>
 
