--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine.Components/H.LowCode.DesignEngine.Components.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine.Components/H.LowCode.DesignEngine.Components.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Schema\H.LowCode.Schema.csproj" />
+    <ProjectReference Include="..\H.LowCode.DesignEngine\H.LowCode.DesignEngine.csproj" />
   </ItemGroup>
 
 </Project>
