--- a/src/DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
@@ -21,6 +21,7 @@
 	<PackageReference Include="AntDesign" />
 	<PackageReference Include="H.Util.Blazor" />
 	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
+	<PackageReference Include="Microsoft.Extensions.Http" />
 	<PackageReference Include="System.Net.Http.Json" />
 	<PackageReference Include="Volo.Abp.Core" />
   </ItemGroup>
@@ -32,6 +33,12 @@
 
   <ItemGroup>
     <PackageReference Include="H.Extensions.System" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="SettingPanel\DataSourceSetting.razor">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
   </ItemGroup>
 
 </Project>
