--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -10,6 +10,7 @@
     <PackageVersion Include="BlazorMonaco" Version="3.2.0" />
     <PackageVersion Include="Mapsui.Blazor" Version="4.1.6" />
     <PackageVersion Include="Markdig" Version="0.31.0" />
+    <PackageVersion Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageVersion Include="System.Net.Http.Json" Version="8.0.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Components" Version="8.0.6" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.6" />
