--- a/src/RenderEngine/H.LowCode.RenderEngine.AntBlazor/H.LowCode.RenderEngine.AntBlazor.csproj
+++ b/src/RenderEngine/H.LowCode.RenderEngine.AntBlazor/H.LowCode.RenderEngine.AntBlazor.csproj
@@ -6,6 +6,7 @@
   <ItemGroup>
 	<PackageReference Include="AntDesign" />
 	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
+	<PackageReference Include="Microsoft.Extensions.Http" />
 	<PackageReference Include="Volo.Abp.Core" />
   </ItemGroup>
 
