--- a/src/Theme/H.LowCode.Theme.AntBlazorPro/H.LowCode.Theme.AntBlazorPro.csproj
+++ b/src/Theme/H.LowCode.Theme.AntBlazorPro/H.LowCode.Theme.AntBlazorPro.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     <PackageReference Include="AntDesign.ProLayout" />
+    <PackageReference Include="Microsoft.Extensions.Http" />
     <PackageReference Include="System.Net.Http.Json" />
     <PackageReference Include="Volo.Abp.Core" />
   </ItemGroup>
