--- a/src/Admin/H.LowCode/H.LowCode.csproj
+++ b/src/Admin/H.LowCode/H.LowCode.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+	<PackageReference Include="H.Util.Blazor" />
 	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     <PackageReference Include="Volo.Abp.Core" />
   </ItemGroup>
