--- a/src/Host/H.LowCode.Admin.Host/H.LowCode.Admin.Host.csproj
+++ b/src/Host/H.LowCode.Admin.Host/H.LowCode.Admin.Host.csproj
@@ -11,6 +11,7 @@
 		<ProjectReference Include="..\..\Admin\H.LowCode\H.LowCode.csproj" />
 		<ProjectReference Include="..\..\Admin\H.LowCode.Admin.HttpApi\H.LowCode.Admin.HttpApi.csproj" />
 		<ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine.HttpApi\H.LowCode.DesignEngine.HttpApi.csproj" />
+		<ProjectReference Include="..\..\RenderEngine\H.LowCode.RenderEngine.HttpApi\H.LowCode.RenderEngine.HttpApi.csproj" />
 		<ProjectReference Include="..\H.LowCode.Admin.Host.Client\H.LowCode.Admin.Host.Client.csproj" />
 	</ItemGroup>
 	
