--- a/src/RenderEngine/H.LowCode.RenderEngine/H.LowCode.RenderEngine.csproj
+++ b/src/RenderEngine/H.LowCode.RenderEngine/H.LowCode.RenderEngine.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<Import Project="..\..\global.props" />
 	<Import Project="..\..\nuget.publish.props" />
@@ -8,15 +8,22 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	<PackageReference Include="Microsoft.AspNetCore.Components" />
-  </ItemGroup>
+		<SupportedPlatform Include="browser" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Components" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
+		<PackageReference Include="Microsoft.Extensions.Http" />
+		<PackageReference Include="System.Net.Http.Json" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="H.Extensions.System" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="H.Extensions.System" />
+	</ItemGroup>
 
 </Project>
