--- a/src/RenderEngine/H.LowCode.RenderEngine/H.LowCode.RenderEngine.csproj
+++ b/src/RenderEngine/H.LowCode.RenderEngine/H.LowCode.RenderEngine.csproj
@@ -16,6 +16,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
 		<PackageReference Include="Microsoft.Extensions.Http" />
 		<PackageReference Include="System.Net.Http.Json" />
+		<PackageReference Include="Volo.Abp.Core" />
 	</ItemGroup>
 
 	<ItemGroup>
